--- a/src/Components/SignIn/SignIn.scss
+++ b/src/Components/SignIn/SignIn.scss
@@ -125,6 +125,7 @@
         margin-top: 20px;
         margin-bottom: 20px;
         color: #fff;
+        cursor: pointer;
         text-decoration: none;
 
         &:hover{
