--- a/src/Components/ForgetPassword/ForgetPassword.scss
+++ b/src/Components/ForgetPassword/ForgetPassword.scss
@@ -18,6 +18,16 @@
         margin-bottom: 28px;
     }
 
+    & .password__success{
+        background: rgb(0, 128, 0);
+        border-radius: 4px;
+        font-size: 14px;
+        margin-top: 20px;
+        margin: 0 0 16px;
+        color: #fff;
+        padding: 15px 20px;   
+    }
+
     & .password__error{
         background: #e87c03;
         border-radius: 4px;
@@ -55,5 +65,23 @@
             color: #fff;
             cursor: pointer; 
         }
+    }
+
+    & .password__paragrapgh{
+        color: grey;
+        margin-top: 22px;
+        font-size: 16px;
+
+        & .password__link{
+            color: #fff;
+            text-decoration: none;
+            font-size: 19px;
+
+            &:hover{
+                text-decoration: underline;
+                color: #979494;
+            }
+        }
+
     }
 }
