--- a/src/Components/SignUpForm/SignUp.scss
+++ b/src/Components/SignUpForm/SignUp.scss
@@ -66,6 +66,7 @@
                     color: rgb(12, 156, 213);
                     font-size: 18px;
                     margin-bottom: 13px;
+                    user-select: none;
                     cursor: pointer;
                 }
 
