--- a/src/Components/MovieShow/Movies.scss
+++ b/src/Components/MovieShow/Movies.scss
@@ -3,61 +3,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Prompt:ital,wght@0,500;1,400&family=Quicksand:wght@400;500&display=swap');
 
 
+.movie__list__container {
+  margin: 70px 0px 30px 0px;
+ 
 
-.movie__list__container{
-    margin: 70px 0px 30px 0px;
+  .movie__container {
+    height: auto;
+    position: relative;
 
-    & .movie__container{
-        height: auto;
-
-        & .movie__genres{
-            color: #fff;
-            font-size: 32px;
-            font-weight: bold;
-            font-family: 'Quicksand', sans-serif;
-            padding: 20px 0px 20px 30px;
-        }
-    
-        & .movie__list{
-            display: flex;
-            overflow-x: auto;
-            transition: transform 0.5s ease;
-            overflow-y: hidden;
-            gap: 20px;
-            margin: 0px 60px;
-    
-            &::-webkit-scrollbar{
-                width: 0px;
-            }
-    
-            & .movie{
-                flex: 0 0 auto;
-                width: 250px; 
-                text-align: center;
-    
-                & img{
-                    width: 100%;
-                    border-radius: 8px;
-                    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-                    transition: transform 0.3s ease;
-                    height: 444px;
-                    width: 250px;
-    
-                }
-    
-                &:hover{
-                    transform: scale(1.02);
-                }
-    
-                & .movie__title{
-                    margin-top: 8px;
-                    color: #fff;
-                    padding: 10px 0px;
-                    text-align: center;
-                }
-            }
-        }
-    
+    .movie__genres {
+      color: #fff;
+      font-size: 32px;
+      font-weight: bold;
+      font-family: 'Quicksand', sans-serif;
+      padding: 20px 0px 20px 30px;
     }
 
+    .movie__list {
+      display: flex;
+      overflow-x: auto;
+      transition: transform 0.5s ease; 
+      overflow-y: hidden;
+      gap: 20px;
+      margin: 0px 60px;
+
+    
+      &::-webkit-scrollbar {
+        width: 0px;
+      }
+
+      .movie {
+        flex: 0 0 auto;
+        width: 250px;
+        text-align: center;
+
+        img {
+          width: 100%;
+          border-radius: 8px;
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+          transition: transform 0.5s ease; 
+          height: 444px;
+          width: 250px;
+        }
+
+        &:hover {
+          transform: scale(1.02);
+        }
+
+        .movie__title {
+          margin-top: 8px;
+          color: #fff;
+          padding: 10px 0px;
+          text-align: center;
+        }
+      }
+    }
+
+    & .hidden{
+        display: none;
+    }
+
+    .scroll__button { 
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%); 
+      background-color: transparent;
+      border: none;
+      color: #000;
+      background-color: #fff;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      font-size: 24px;
+      cursor: pointer;
+      z-index: 10;
+
+      &.left {
+        left: 10px; 
+      }
+
+      &.right {
+        right: 10px; 
+      }
+    }
+  }
 }
