--- a/src/Components/MovieShow/Movies.scss
+++ b/src/Components/MovieShow/Movies.scss
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@700&family=Mulish:ital,wght@0,300;1,200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Prompt:ital,wght@0,500;1,400&family=Quicksand:wght@400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@700&family=Mulish:ital,wght@0,300;1,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Prompt:ital,wght@0,500;1,400&family=Quicksand:wght@400;500&display=swap");
 
 .movie__list__container {
   margin: 70px 0px 30px 0px;
- 
 
   .movie__container {
     height: auto;
@@ -15,19 +13,18 @@
       color: #fff;
       font-size: 32px;
       font-weight: bold;
-      font-family: 'Quicksand', sans-serif;
+      font-family: "Quicksand", sans-serif;
       padding: 20px 0px 20px 30px;
     }
 
     .movie__list {
       display: flex;
       overflow-x: auto;
-      transition: transform 0.5s ease; 
+      transition: transform 0.5s ease;
       overflow-y: hidden;
       gap: 20px;
       margin: 0px 60px;
 
-    
       &::-webkit-scrollbar {
         width: 0px;
       }
@@ -41,7 +38,7 @@
           width: 100%;
           border-radius: 8px;
           box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-          transition: transform 0.5s ease; 
+          transition: transform 0.5s ease;
           height: 444px;
           width: 250px;
         }
@@ -59,14 +56,14 @@
       }
     }
 
-    & .hidden{
-        display: none;
+    & .hidden {
+      display: none;
     }
 
-    .scroll__button { 
+    .scroll__button {
       position: absolute;
       top: 50%;
-      transform: translateY(-50%); 
+      transform: translateY(-50%);
       background-color: transparent;
       border: none;
       color: #000;
@@ -79,11 +76,11 @@
       z-index: 10;
 
       &.left {
-        left: 10px; 
+        left: 10px;
       }
 
       &.right {
-        right: 10px; 
+        right: 10px;
       }
     }
   }
