--- a/src/Components/MovieShow/Series.scss
+++ b/src/Components/MovieShow/Series.scss
@@ -1,101 +1,94 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@700&family=Mulish:ital,wght@0,300;1,200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Prompt:ital,wght@0,500;1,400&family=Quicksand:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@700&family=Mulish:ital,wght@0,300;1,200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Prompt:ital,wght@0,500;1,400&family=Quicksand:wght@400;500&display=swap");
 
+.series__list__container {
+  margin: 70px 0px 30px 0px;
+  position: relative;
 
+  & .series__container {
+    height: auto;
 
-
-.series__list__container{
-    margin: 70px 0px 30px 0px;
-    position: relative;
-
-    & .series__container{
-        height: auto;
-
-        & .series__title{
-            color: #fff;
-            font-size: 32px;
-            font-weight: bold;
-            font-family: 'Quicksand', sans-serif;
-            padding: 20px 0px 20px 30px;
-        }
-
-        & .series__list{
-            display: flex;
-            overflow-x: auto;
-            transition: transform 0.5s ease;
-            overflow-y: hidden;
-            gap: 20px;
-            margin: 0px 60px;
-    
-            &::-webkit-scrollbar{
-                width: 0px;
-            }
-
-            & .series{
-                flex: 0 0 auto;
-                width: 250px; 
-                text-align: center;
-    
-                & img{
-                    width: 100%;
-                    border-radius: 8px;
-                    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-                    transition: transform 0.3s ease;
-                    height: 444px;
-                    width: 250px;
-    
-                }
-    
-                &:hover{
-                    transform: scale(1.02);
-                }
-                
-                & .series__name{
-                    margin-top: 8px;
-                    color: #fff;
-                    padding: 10px 0px;
-                    text-align: center;
-                }
-    
-            }
-        }
-
-        & .disabled__left{
-            display: none;
-        }
-
-        & .disabled__right{
-            display: none;
-        }
-        .hidden {
-            display: none;
-        }
-        
-
-        & .scrolling__button {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: transparent;
-            border: none;
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            color: #000;
-            font-size: 24px;
-            cursor: pointer;
-            z-index: 10;
-            background-color: #fff;
-
-            &.left {
-                left: 10px;
-            }
-
-            &.right {
-                right: 10px;
-            }
-        }
+    & .series__title {
+      color: #fff;
+      font-size: 32px;
+      font-weight: bold;
+      font-family: "Quicksand", sans-serif;
+      padding: 20px 0px 20px 30px;
     }
-    
+
+    & .series__list {
+      display: flex;
+      overflow-x: auto;
+      transition: transform 0.5s ease;
+      overflow-y: hidden;
+      gap: 20px;
+      margin: 0px 60px;
+
+      &::-webkit-scrollbar {
+        width: 0px;
+      }
+
+      & .series {
+        flex: 0 0 auto;
+        width: 250px;
+        text-align: center;
+
+        & img {
+          width: 100%;
+          border-radius: 8px;
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+          transition: transform 0.3s ease;
+          height: 444px;
+          width: 250px;
+        }
+
+        &:hover {
+          transform: scale(1.02);
+        }
+
+        & .series__name {
+          margin-top: 8px;
+          color: #fff;
+          padding: 10px 0px;
+          text-align: center;
+        }
+      }
+    }
+
+    & .disabled__left {
+      display: none;
+    }
+
+    & .disabled__right {
+      display: none;
+    }
+    .hidden {
+      display: none;
+    }
+
+    & .scrolling__button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: transparent;
+      border: none;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      color: #000;
+      font-size: 24px;
+      cursor: pointer;
+      z-index: 10;
+      background-color: #fff;
+
+      &.left {
+        left: 10px;
+      }
+
+      &.right {
+        right: 10px;
+      }
+    }
+  }
 }
