--- a/src/Components/LandingSlider/TextComponents/style.scss
+++ b/src/Components/LandingSlider/TextComponents/style.scss
@@ -9,7 +9,7 @@
     height: 60vh;
     flex-direction: column;
     width: 100%;
-    background: rgba($color: #000000, $alpha: 0.5);
+    // background: rgba($color: #000000, $alpha: 0.5);
 
     & .text__title{
         font-size: 48px;
