--- a/src/Components/PaymentDetails/paymentDetails.scss
+++ b/src/Components/PaymentDetails/paymentDetails.scss
@@ -90,6 +90,7 @@
 
             & h3{
                 margin-left: 15px;
+                font-size: 16px;
             }
 
             & .paymentcard_logo{
@@ -106,6 +107,10 @@
                 margin-left: 245px;
                 font-size: 25px;
                 color: #000;
+            }
+
+            & .rightarrow__first{
+                margin-right: 25px;
             }
         
         }
