--- a/src/Components/UPIpay/UPIpay.scss
+++ b/src/Components/UPIpay/UPIpay.scss
@@ -1,108 +1,115 @@
-.upipay{
+.upipay {
+  background-color: #fff;
+  height: 100vh;
 
-    background-color: #fff;
-    height: 100vh;
+  & .upipay__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 12vh;
+    margin: 0px 40px;
 
-    & .upipay__header{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 12vh;
-        margin: 0px 40px;
-
-        & .upipay__image{
-            height: 86px;
-            width: 164px;
-        }
-
-        & .upipay__link{
-            font-size: 24px;
-            font-weight: bold;
-            text-decoration: none;
-            color: #000;
-        }
+    & .upipay__image {
+      height: 86px;
+      width: 164px;
     }
 
-    & .upipay__container{
-        margin-top: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: auto;
+    & .upipay__link {
+      font-size: 24px;
+      font-weight: bold;
+      text-decoration: none;
+      color: #000;
+    }
+  }
 
-        & .upipay__span{
-            font-size: 18px;
-            color: #000;
-            margin-bottom: 10px;
-        }
+  & .upipay__container {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
 
-        & .upipay__title{
-            font-size: 34px;
-            color: #000;
-            margin-bottom: 10px;
-        }
-        & .upipay__paragraph{
-            color: rgb(177, 173, 173);
-            font-size: 18px;
-            font-weight: 500;
-            margin-bottom: 10px;
-            width: 400px;
-        }
-
-        & .upipay__inputs{
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-            & .upipay__select{
-                width: 400px;
-                padding: 15px 0px;
-                font-size: 20px;
-                margin-bottom: 15px;
-                text-align: center;
-
-            }
-
-            & .upipay__option{
-                padding: 15px 0px;
-            }
-
-            & .upipay__input{
-                padding: 15px 0px;
-                text-align: start;
-                font-size: 18px;
-                text-align: center;
-                color: #000;
-            }
-
-            & .upipay__button{
-                width: 400px;
-                padding: 20px 0px;
-                color: #fff;
-                background: red;
-                border: 0;
-                margin-top: 20px;
-                border-radius: 3px;
-                font-size: 18px;
-            }
-            
-        }
+    & .error__message {
+      color: #fff;
+      padding: 15px 0px;
+      width: 400px;
+      background: red;
+      margin-bottom: 10px;
+      text-align: center;
+      border-radius: 2px;
     }
 
-    & .upipay__timer{
-        margin-top: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 40vh;
-
-        & .upipay__para{
-            font-size: 20px;
-            color: rgb(180, 178, 178);
-            margin-bottom: 14px;
-        }
+    & .upipay__span {
+      font-size: 18px;
+      color: #000;
+      margin-bottom: 10px;
     }
+
+    & .upipay__title {
+      font-size: 34px;
+      color: #000;
+      margin-bottom: 10px;
+    }
+    & .upipay__paragraph {
+      color: rgb(177, 173, 173);
+      font-size: 18px;
+      font-weight: 500;
+      margin-bottom: 10px;
+      width: 400px;
+    }
+
+    & .upipay__inputs {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      & .upipay__select {
+        width: 400px;
+        padding: 15px 0px;
+        font-size: 20px;
+        margin-bottom: 15px;
+        text-align: center;
+      }
+
+      & .upipay__option {
+        padding: 15px 0px;
+      }
+
+      & .upipay__input {
+        padding: 15px 0px;
+        text-align: start;
+        font-size: 18px;
+        text-align: center;
+        color: #000;
+      }
+
+      & .upipay__button {
+        width: 400px;
+        padding: 20px 0px;
+        color: #fff;
+        background: red;
+        border: 0;
+        margin-top: 20px;
+        border-radius: 3px;
+        font-size: 18px;
+      }
+    }
+  }
+
+  & .upipay__timer {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40vh;
+
+    & .upipay__para {
+      font-size: 20px;
+      color: rgb(180, 178, 178);
+      margin-bottom: 14px;
+    }
+  }
 }
