--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -37,6 +37,7 @@ $primary-color : #fff;
                 margin-bottom: 20px;
                 font-size: 15px;
                 text-decoration: underline;
+                cursor: pointer;
             }
         }
     }
